--- a/ryan/package.json
+++ b/ryan/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-charts": "^3.0.15",
     "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.1",
     "tachyons": "^4.12.0",
