--- a/ryan/package.json
+++ b/ryan/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "css-loader": "^5.0.1",
     "react": "^17.0.1",
+    "react-calendar-heatmap": "^1.8.1",
     "react-dom": "^17.0.1",
     "react-google-charts": "^3.0.15",
     "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.1",
+    "react-tooltip": "^4.2.11",
     "tachyons": "^4.12.0",
     "web-vitals": "^0.2.4"
   },
